# CMakeTemplate

./: CMakeLists.txt  Proxy.ps1  README.md  test.json
.config/: c_cpp_properties.json.in  launch.json.in  tasks.json.in
include/biology/: animal.h
include/func/: CallbackHandler.h  Factory.h  Global.h
include/module/: hello.ixx
src/: main.cpp
